// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box overflow prop sets overflow 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  overflow: scroll;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="Box"
      overflow="scroll"
    />
  </div>
</DocumentFragment>
`;

exports[`Box renders 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;
